<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BubbleRubble</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_new_game">NewGame</string>
    <string name="title_activity_continue">Continue</string>
    <string name="FC">Грати з гравцем</string>
    <string name="SC">Грати з комп\'ютером</string>
    <string name="title_activity_game">Game</string>
    <string name="back">Назад</string>
    <string name="title_activity_new_game2">NewGame2</string>
    <string name="action_settings">Settings</string>
    <string name="pl1">Ім\'я гравця №1</string>
    <string name="pl2">Ім\'я гравця №2</string>
    <string name="ready">Почати гру</string>
    <string name="defPl1">Player1</string>
    <string name="defPl2">Player2</string>
    <string name="timer">Таймер</string>
    <string name="timer2">Вибрати час</string>
    <string name="sec">сек</string>
    <string name="minutes">хв</string>
    <string name="enabled">enable</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="loading">Loading 
        
        
         Please wait...</string>

</resources>