<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/images_3"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewGame2" 
    android:gravity="center">

    <LinearLayout
        android:id="@+id/linearHor"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center" >

        <TextView
            android:id="@+id/pl1tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pl1"
            android:textColor="@color/white"
            android:typeface="sans" />

        <EditText
            android:id="@+id/player1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/defPl1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearH1"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pl2"
            android:textColor="@color/white"
            android:typeface="sans" />

        <EditText
            android:id="@+id/player2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/defPl2" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relative3"
        android:layout_width="500dp"
        android:layout_height="114dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="50dp" >

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/timer"
            android:textColor="@color/white" />

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="182dp"
            android:layout_toRightOf="@+id/TextView01"
            android:text="@string/enabled" />

        <Button
            android:id="@+id/timechoose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/checkBox1"
            android:layout_alignParentBottom="true"
            android:background="@drawable/button2"
            android:onClick="choseTime"
            android:text="@string/timer2"
            android:textColor="@color/white"
            android:typeface="sans"
            android:visibility="visible" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/linearH3"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" >

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/button2"
            android:onClick="cancel"
            android:text="@string/back"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="170dp"
            android:background="@drawable/button2"
            android:onClick="start"
            android:text="@string/ready"
            android:textColor="@color/white" />

    </RelativeLayout>

</LinearLayout>